objects/Lead_Assignment_Ids__c.object
<CustomObject>
    <fields>
        <fullName>Island_BDM_Hawaii__c</fullName>
        <description>The alias of the BDM assigned to Hawaii (Big Island)</description>
        <label>Island BDM Hawaii</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Island_BDM_Kauai__c</fullName>
        <description>The alias of the BDM assigned to Kauai</description>
        <label>Island BDM Kauai</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Island_BDM_Lanai__c</fullName>
        <description>The alias of the BDM assigned to Lanai</description>
        <label>Island BDM Lanai</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Island_BDM_Maui__c</fullName>
        <description>The alias of the BDM assigned to Maui</description>
        <label>Island BDM Maui</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Island_BDM_Molokai__c</fullName>
        <description>The alias of the BDM assigned to Molokai</description>
        <label>Island BDM Molokai</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assignment_Status__c</fullName>
        <description>Status field value on Lead that will be used to trigger the lead assiworkflow.</description>
        <label>Lead Assignment Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Account_BDM__c</fullName>
        <description>The alias of the BDM to be assigned to leads when there is a large number of estimated worksite employees</description>
        <label>Major Account BDM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Account_WSE_Count__c</fullName>
        <description>This is the count that determines when the large account BDM should be assigned.</description>
        <label>Major Account WSE Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>User Ids to whom lead would be assigned to.  All islands must be filled in or the lead assignment will fail.</description>
    <label>Lead Assignment UserIDs</label>
</CustomObject>